--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@ body
     padding: 0;
 }
 
+span
+{
+    font-weight: 900;
+}
+
+#wrapper
+{
+    padding-bottom: 100px;
+    margin-left: 280px;
+}
+
 /*--------------------- Header ---------------------*/
 header
 {
@@ -69,10 +80,10 @@ div img
 /*--------------------- Footer ---------------------*/
 footer
 {
-    clear: both;
-    position: relative;
+    position: fixed;
     height: 80px;
-    margin-top: -200px;
+    bottom: 0;
+    left: 0;
     width: 100%;
     background-color: rgb(254,140,113);
 }
